# parallel-computing

lab01/: CMakeLists.txt  gistogram.py
lab01/include/: matrix.h  statistics.h  timer.h
lab01/src/: main.cpp  matrix.cpp  statistics.cpp  timer.cpp
lab02/: CMakeLists.txt  plot_graphs.py
lab02/include/: matrix_ops.h
lab02/src/: main.cpp  matrix_ops.cpp
lab03/: CMakeLists.txt
lab03/include/: cpuinfo.h
lab03/src/: cpuinfo.cpp  main.cpp
lab04/: CMakeLists.txt  graphs.py  main.cpp
lab04/include/: memory_tests.h
lab04/src/: memory_tests.cpp
lab05/: CMakeLists.txt
lab05/include/: baseline.h  simd_vector.h  utils.h
lab05/src/: baseline.cpp  main.cpp  simd_vector.cpp  utils.cpp
lab07/: CMakeLists.txt  test.pgm
lab07/include/: image.h  sobel_filter.h
lab07/src/: image.cpp  main.cpp  sobel_filter.cpp
lab08/: CMakeLists.txt  main.cpp
lab08/include/: vec_ops.h
lab08/src/: vec_ops.cpp  vec_ops.cu
